[gd_scene load_steps=6 format=3 uid="uid://ccxti6qtyqsln"]

[ext_resource type="Script" path="res://example/card_deck/cards.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://vq3dxl1s5h3r" path="res://example/example_navigation.tscn" id="2"]

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scaler/Label2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scaler:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="1"]
resource_name = "Reshuffle"
length = 2.147
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scaler/Label2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scaler:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(4, 4), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"update_card_view"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jggh"]
_data = {
"RESET": SubResource("2"),
"Reshuffle": SubResource("1")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")
metadata/_edit_lock_ = true

[node name="PileDraw" type="Panel" parent="."]
show_behind_parent = true
offset_left = 79.0
offset_top = 114.0
offset_right = 129.0
offset_bottom = 584.0

[node name="PileDiscard" type="Panel" parent="."]
show_behind_parent = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -197.0
offset_top = 104.0
offset_right = -147.23
offset_bottom = 581.0
grow_horizontal = 0

[node name="Hand" type="Panel" parent="."]
show_behind_parent = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -94.0
offset_right = -30.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = 100.0
offset_right = 212.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
text = "Click on cards to move them into discard pile (right).
Unless you toggled on the:"

[node name="Label3" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -307.0
offset_top = -142.0
offset_right = 273.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
text = "In which case they will be drawn in the reverse order they were inserted in."

[node name="Label2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -220.0
offset_right = 205.0
offset_bottom = -194.0
grow_horizontal = 2
grow_vertical = 2
text = "Click on the button below to draw from the Draw pile (left)"

[node name="CheckBox" type="CheckBox" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 158.0
offset_right = 120.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
text = "Put Back Onto Draw Pile Mode"

[node name="Create" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = 206.0
offset_right = 62.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
text = "Create Grey Card"

[node name="Cards" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -177.0
offset_top = 251.0
offset_right = -65.0
offset_bottom = 423.0
mouse_filter = 2

[node name="Button" type="Button" parent="Cards"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
disabled = true

[node name="ActualPressableButton" type="Button" parent="Cards/Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Label" type="Label" parent="Cards/Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Card 0"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -190.0
offset_right = 53.0
offset_bottom = -159.0
grow_horizontal = 2
grow_vertical = 2
text = "Gimme Kards"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_0jggh")
}

[node name="Scaler" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Label2" type="Label" parent="Scaler"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -11.0
offset_right = 70.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Draw Pile Emptied"
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Scaler/Label2"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.756863)

[node name="Navigation" parent="." instance=ExtResource("2")]
grow_horizontal = 2

[connection signal="pressed" from="Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Draw_pressed"]
